// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbBar actions should close-switcher 1`] = `
Object {
  "type": "BREADCRUMB_BAR_CLOSE_SWITCHER",
}
`;

exports[`BreadcrumbBar actions should load-switcher-resources-by-resource and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "options": Object {},
        "resource": Object {
          "nameField": "name",
          "resourceUrl": "some/url",
          "switcherItemUrl": "some/url/:id",
        },
      },
      "type": "BREADCRUMB_BAR_RESOURCES_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": [Error: some-error],
      "type": "BREADCRUMB_BAR_RESOURCES_FAILURE",
    },
  ],
]
`;

exports[`BreadcrumbBar actions should load-switcher-resources-by-resource and success 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "options": Object {},
        "resource": Object {
          "nameField": "name",
          "resourceUrl": "some/url",
          "switcherItemUrl": "some/url/:id",
        },
      },
      "type": "BREADCRUMB_BAR_RESOURCES_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "items": Array [
          Object {
            "name": "name-1",
            "url": "some/url/1",
          },
          Object {
            "name": "name-2",
            "url": "some/url/2",
          },
          Object {
            "name": "name-3",
            "url": "some/url/3",
          },
        ],
        "page": 1,
        "pages": 1.5,
      },
      "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
    },
  ],
]
`;

exports[`BreadcrumbBar actions should toggle-switcher 1`] = `
Object {
  "type": "BREADCRUMB_BAR_TOGGLE_SWITCHER",
}
`;
